src/main/java/com/example/githubapicalls/errors/GithubUserNotFoundException.java
package com.example.githubapicalls.errors;

public class GithubUserNotFoundException extends RuntimeException {
}
